# ToDoAlyance

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/: dependencies.py
backend/api/: task_admin_api.py  task_api.py
backend/core/: settings.py
backend/migration/: env.py
backend/migration/versions/: 31cc2b9e3f7b_initial_migration.py  8a5e04e0a98a_update.py
backend/models/: static.py
backend/models/db_models/: base.py  task.py
backend/models/schemas/: task.py
backend/services/domain/task_manager/: exception.py  task_manager_interface.py  task_manager_service.py
backend/services/infrastructure/task_database/: task_database_interface.py  task_database_repository.py
