[tool.poetry]
name = "password-store"
version = "0.1.0"
description = ""
authors = ["pelegrimxd <nnakozhem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi ="0.121.0"
sqlalchemy="2.0.44"
psycopg-binary="3.2.12"
psycopg2="2.9.11"
pydantic="2.12.3"
pydantic-settings="2.11.0"
python = "3.12.2"
uvicorn = "^0.38.0"
alembic = "^1.17.2"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
